Catching everything up

--- a/ExpenseManager.Business/App.config
+++ b/ExpenseManager.Business/App.config
@@ -15,6 +15,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="ExpenseManager" connectionString="data source=(LocalDB)\ProjectsV13;initial catalog=ExpenseManager.Database;integrated security=True;multipleactiveresultsets=True;application name=ExpenseManagerWebLocal" providerName="System.Data.SqlClient" />
+    <add name="ExpenseManager" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=ExpenseManager.Database;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient"/>
   </connectionStrings>
 </configuration>
