--- a/ExpenseManager.Web/ExpenseManager.Web.csproj
+++ b/ExpenseManager.Web/ExpenseManager.Web.csproj
@@ -125,6 +125,22 @@
     <Reference Include="Microsoft.Owin.Security.Twitter">
       <HintPath>..\packages\Microsoft.Owin.Security.Twitter.3.0.1\lib\net45\Microsoft.Owin.Security.Twitter.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
+      <HintPath>..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity.Configuration, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
+      <HintPath>..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.Configuration.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity.RegistrationByConvention, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
+      <HintPath>..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.RegistrationByConvention.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.Web.Infrastructure">
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
@@ -201,6 +217,10 @@
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.WebPages.Razor.dll</HintPath>
     </Reference>
+    <Reference Include="Unity.Mvc5, Version=1.2.3.0, Culture=neutral, PublicKeyToken=43da31bc42a85347, processorArchitecture=MSIL">
+      <HintPath>..\packages\Unity.Mvc5.1.2.3\lib\net45\Unity.Mvc5.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="WebGrease">
       <Private>True</Private>
       <HintPath>..\packages\WebGrease.1.5.2\lib\WebGrease.dll</HintPath>
@@ -212,6 +232,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\IdentityConfig.cs" />
+    <Compile Include="App_Start\UnityConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Areas\HelpPage\ApiDescriptionExtensions.cs" />
     <Compile Include="Areas\HelpPage\App_Start\HelpPageConfig.cs" />
@@ -242,6 +263,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\api\ExpenseController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\MeController.cs" />
@@ -258,19 +280,27 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App\em.module.js" />
-    <Content Include="App\expressions\examples.html" />
-    <Content Include="App\filters\filters.html" />
-    <Content Include="App\filters\filtersController.js" />
-    <Content Include="App\filters\filters.module.js" />
-    <Content Include="App\filters\filtersFilters.js" />
-    <Content Include="App\home\home.module.js" />
-    <Content Include="App\home\homeIndex.html" />
-    <Content Include="App\home\homeIndexController.js" />
-    <Content Include="App\menuController.js" />
-    <Content Include="App\expressions\expressions.html" />
-    <Content Include="App\expressions\expressions.module.js" />
-    <Content Include="App\expressions\expressionsController.js" />
+    <Content Include="app\em.constants.js" />
+    <Content Include="app\em.module.js" />
+    <Content Include="app\em.services.js" />
+    <Content Include="app\expenseSummary\expenseSummary.html" />
+    <Content Include="app\expenseSummary\expenseSummaryController.js" />
+    <Content Include="app\expressions\examples.html" />
+    <Content Include="app\filters\filters.html" />
+    <Content Include="app\filters\filtersController.js" />
+    <Content Include="app\filters\filters.module.js" />
+    <Content Include="app\filters\filtersFilters.js" />
+    <Content Include="app\home\home.module.js" />
+    <Content Include="app\home\homeIndex.html" />
+    <Content Include="app\home\homeIndexController.js" />
+    <Content Include="app\menuController.js" />
+    <Content Include="app\expressions\expressions.html" />
+    <Content Include="app\expressions\expressions.module.js" />
+    <Content Include="app\expressions\expressionsController.js" />
+    <Content Include="app\utils\dataServiceHelper.service.js" />
+    <Content Include="app\utils\dataTools.service.js" />
+    <Content Include="app\utils\urlHelper.service.js" />
+    <Content Include="app\utils\utils.module.js" />
     <Content Include="Areas\HelpPage\HelpPage.css" />
     <Content Include="Areas\HelpPage\Views\_ViewStart.cshtml" />
     <Content Include="Content\app.css" />
@@ -332,6 +362,7 @@
     <Content Include="JS\lib\bower_components\angular-ui-router\CONTRIBUTING.md" />
     <Content Include="JS\lib\bower_components\angular-ui-router\LICENSE" />
     <Content Include="JS\lib\bower_components\angular-ui-router\README.md" />
+    <Content Include="app\expenseSummary\expenseSummary.module.js" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -389,8 +420,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App\expenseSummary\" />
-    <Folder Include="App\randomness\" />
+    <Folder Include="app\randomness\" />
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
@@ -400,6 +430,16 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ExpenseManager.Business\ExpenseManager.Business.csproj">
+      <Project>{ef31db7d-aab4-4199-9c2d-0e888ea8bca7}</Project>
+      <Name>ExpenseManager.Business</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ExpenseManager.Models\ExpenseManager.Models.csproj">
+      <Project>{6ae3b4d6-30a8-4236-a090-a79fdb391478}</Project>
+      <Name>ExpenseManager.Models</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
