--- a/ExpenseManager.Web/packages.config
+++ b/ExpenseManager.Web/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net452" />
   <package id="bootstrap" version="3.0.0" targetFramework="net452" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="jQuery" version="1.10.2" targetFramework="net452" />
   <package id="Knockout.Validation" version="1.0.1" targetFramework="net452" />
@@ -44,5 +45,7 @@
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
   <package id="Sammy.js" version="0.7.4" targetFramework="net452" />
+  <package id="Unity" version="4.0.1" targetFramework="net452" />
+  <package id="Unity.Mvc5" version="1.2.3" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
